added mondoDB, mongoose

--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,4 @@
 PORT=5000
 NODE_ENV=development
 
+MONGO_URI=mongodb+srv://AlexR:barcelona10@cluster0.g0j6d.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
